--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,13 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./... -coverprofile=c.out
+
+    - name: Conver Report
+      run: go tool cover -html=c.out -o coverage.html
+
+    - name: Upload coverage to Codacy
+      uses: codacy/codacy-coverage-reporter-action@v1
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: coverage.html
