--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,21 +22,16 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./... 
+      
+    - name: Coverage Profile
+      run: go test -v ./... -coverprofile=c.out
 
-    - name: Update coverage report
-      uses: ncruces/go-coverage-report@v0
+    - name: Conver Report
+      run: go tool cover -html=c.out -o ./coverage.html
+
+    - name: Upload coverage to Codacy
+      uses: codacy/codacy-coverage-reporter-action@v1
       with:
-        report: true
-        chart: true
-        amend: true
-      if: |
-        github.event_name != 'pull_request' &&
-        github.event_name == 'push'  
-      continue-on-error: true
-
-    # - name: Upload coverage to Codacy
-    #   uses: codacy/codacy-coverage-reporter-action@v1
-    #   with:
-    #     project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-    #     coverage-reports: coverage.html
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: ./coverage.html
