--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,3 +43,4 @@ jobs:
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
         coverage-reports: c.out
+        force-coverage-parser: go
