--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,29 @@ on:
 
 jobs:
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '>=1.22.1'
+    
+    - name: Test
+      run: go test -v ./... 
+      
+    - name: Coverage Profile
+      run: go test -v ./... -coverprofile=c.out
+
+    - name: Upload coverage to Codacy
+      uses: codacy/codacy-coverage-reporter-action@v1
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: c.out
+        force-coverage-parser: go
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -20,23 +43,3 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
-
-    - name: Update coverage report
-      uses: ncruces/go-coverage-report@v0
-      with:
-        report: true
-        chart: true
-        amend: true
-      if: |
-        github.event_name != 'pull_request' &&
-        github.event_name == 'push'  
-      continue-on-error: true
-
-    # - name: Upload coverage to Codacy
-    #   uses: codacy/codacy-coverage-reporter-action@v1
-    #   with:
-    #     project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-    #     coverage-reports: coverage.html
