--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,11 @@
 FROM golang:alpine3.19
 
+ENV TARGET localhost
+ENV PORT_SCANS nmap-tcp-top
+ENV SERVICE_SCANS whatweb
+
 RUN apk add --no-cache git
 
-RUN go install https://github.com/FabianToSpace/GoRecon@latest
+RUN go install github.com/FabianToSpace/GoRecon@latest
 
-ENTRYPOINT ["/go/bin/GoRecon"]
+ENTRYPOINT ["/go/bin/GoRecon", "${TARGET}"]
