update Dockerfile to use latest version and correct env variables

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,11 @@
 FROM golang:alpine3.19
 
-ENV TARGET localhost
-ENV PORT_SCANS nmap-tcp-top
-ENV SERVICE_SCANS whatweb
+ENV TARGET="localhost"
+ENV PORT_SCANS="nmap-tcp-top"
+ENV SERVICE_SCANS="whatweb"
 
 RUN apk add --no-cache git
 
-RUN go install github.com/FabianToSpace/GoRecon@latest
+RUN go install github.com/FabianToSpace/GoRecon@v0.0.3
 
-ENTRYPOINT ["/go/bin/GoRecon", "${TARGET}"]
+ENTRYPOINT /go/bin/GoRecon ${TARGET}
