--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,12 +2,13 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - 'main'
+      - 'feat/*'
   pull_request:
     branches: [ "main" ]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -43,3 +44,20 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+
+  docker-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses : docker/setup-buildx-action@v3
+      - name: Build Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          tags: uptospace/gorecon:latest
+          file: {context}/docker/Dockerfile
