--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,14 +50,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses : docker/setup-buildx-action@v3
+
       - name: Build Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: false
           tags: uptospace/gorecon:latest
-          file: {context}/docker/Dockerfile
+          file: '{context}/docker/Dockerfile'
