--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -57,10 +57,25 @@ jobs:
       - name: Set up Docker Buildx
         uses : docker/setup-buildx-action@v3
 
-      - name: Build Image
+      - name: Build Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: false
+          tags: uptospace/gorecon:latest
+          file: './docker/Dockerfile'
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push Docker Image
+        if: github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
           tags: uptospace/gorecon:latest
           file: './docker/Dockerfile'
