--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -57,25 +57,31 @@ jobs:
       - name: Set up Docker Buildx
         uses : docker/setup-buildx-action@v3
 
-      - name: Build Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          tags: uptospace/gorecon:latest
-          file: './docker/Dockerfile'
-      
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: uptospace/gorecon
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
+
       - name: Push Docker Image
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          tags: uptospace/gorecon:latest
+          push: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main'}}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           file: './docker/Dockerfile'
