--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -76,7 +76,7 @@ jobs:
             type=semver,pattern={{major}}
             type=sha
 
-      - name: Push Docker Image
+      - name: Build and Push Docker Image
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
