add latest to workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -69,12 +69,11 @@ jobs:
         with:
           images: uptospace/gorecon
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and Push Docker Image
         if: github.ref == 'refs/heads/main'
