add symlinks for gorecon cli and add user to whatweb

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,6 +8,9 @@ RUN go install github.com/FabianToSpace/GoRecon@v0.0.5
 
 RUN adduser -D gorecon && chown -R gorecon:gorecon /go/bin 
 
+RUN ln -s /go/bin/GoRecon /usr/local/bin/gorecon \
+    && ln -s /go/bin/GoRecon /usr/local/bin/GoRecon
+
 USER gorecon
 
 ENTRYPOINT /go/bin/GoRecon ${TARGET}
