add env variables for config in base docker image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,8 @@ FROM golang:alpine3.19
 ENV TARGET="localhost"
 ENV PORT_SCANS="nmap-tcp-top"
 ENV SERVICE_SCANS="whatweb"
+ENV THREADS="10"
+ENV PORT_RANGE="1-65535"
 
 RUN go install github.com/FabianToSpace/GoRecon@v0.0.5
 
