--- a/config.yaml.example
+++ b/config.yaml.example
@@ -15,3 +15,12 @@ plugins:
     - nikto
     - nmap-ftp
     - nmap-smb
+messaging:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    exchange: gorecon
+    sender: true
+    receiver: true
